<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/hoho"
    >

    <LinearLayout
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FDA3C1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/person"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_android_white_18dp" />

        <TextView
            android:id="@+id/person_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="11dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/Chat"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/video_call"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginStart="40sp"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_video_call_white_18dp" />

        <ImageView
            android:id="@+id/phone_call"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_phone_white_18dp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="13dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_more_vert_white_18dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionbar"
        tools:listitem="@layout/item_text_in"
        android:layout_marginBottom="65dp"
        >
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:id="@+id/footerbar"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/receive_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:background="#075e54"
            android:text="@string/receive"
            android:textColor="#fff"
            android:textSize="14sp"

            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:id="@+id/type_message"
            android:hint="@string/enter_message"
            android:inputType="textShortMessage"
            android:autofillHints="" />

        <Button
            android:id="@+id/send_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:background="#075e54"
            android:text="@string/send"
            android:textColor="#fff"
            android:textSize="14sp" />


    </LinearLayout>


</RelativeLayout>